--- a/package.json
+++ b/package.json
@@ -6,15 +6,22 @@
   "devDependencies": {
     "bluebird": "^3.5.1",
     "chownr": "^1.0.1",
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
     "mississippi": "^3.0.0",
     "promise-inflight": "^1.0.1",
     "source-list-map": "^2.0.0",
     "ssri": "^6.0.0",
-    "webpack": "^4.10.2",
-    "webpack-cli": "^2.1.4"
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.11.0",
+    "webpack-cli": "^3.0.2",
+    "webpack-dev-server": "^3.1.4"
   },
   "scripts": {
-    "server":"webpack-dev-server"
+    "server": "webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
